--- a/templates/login.html
+++ b/templates/login.html
@@ -5,11 +5,11 @@
     <title>Start</title>
 </head>
 <body>
-    <h1>Login</h1>
-    <form>
-        <input type="text" id="username">
-        <input type="password" id="password">
-        <input type="submit">
-    </form>
+<h1>Login</h1>
+<form action="/" method="POST">
+    <input type="text" name="username" id="username">
+    <input type="password" name="password" id="password">
+    <input type="submit" value="Login">
+</form>
 </body>
 </html>
