--- a/templates/login.html
+++ b/templates/login.html
@@ -1,15 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Start</title>
-</head>
-<body>
-<h1>Login</h1>
+{% extends "base.html" %}
+{% block content%}
 <form action="/" method="POST">
     <input type="text" name="username" id="username">
     <input type="password" name="password" id="password">
     <input type="submit" value="Login">
 </form>
-</body>
-</html>
+{% endblock %}
