kläglicher versuch eines Servers

--- a/templates/course-info.html
+++ b/templates/course-info.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
 {% block content%}
-{% for x in course %}
+{% if current_user.is_authenticated %}
+<button type="button" onclick="window.location.href='{{ url_for('book_course' , course_id = {{id}}, username=current_user.get_id }}';"
+        style="height: 40px"> Buchen {{id}}
+</button>
+{% endif %}
 <div>
-    <span>{{x}} :</span>
-    <span>{{course[x]}}</span>
+    {{course|safe}}
 </div>
-
-{% endfor %}
 {% endblock %}
