--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content%}
+<div>{{error}}</div>
 <form action="/" method="POST">
     <input type="text" name="username" id="username">
     <input type="password" name="password" id="password">
